# tale

./: .gitignore  .justfile  .rustfmt.toml  BASELINE_BENCHMARK.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  OPTIMIZATION_RESULTS.md  README.md  cliff.toml  deny.toml
.github/workflows/: release.yml  test.yaml
benches/: chunking_strategies.rs  file_processing.rs  memory_management.rs
docs/: PHASE2_TODO.md  PRODUCTION_CONFIG.md
examples/: basic_usage.rs  memory_budget.rs  strategy_pattern.rs
scripts/: README_benchmarks.md  benchmark.sh  generate_test_data.py  memory_budget_benchmark.sh  performance_regression.sh  phase2_benchmark.sh  phase3_benchmarks.sh  quick_benchmark.sh
src/: batch.rs  columns.rs  config.rs  constants.rs  defaults.rs  errors.rs  file_state.rs  json_profiler.rs  layout.rs  lib.rs  loglines.rs  main.rs  memory_budget.rs  multiplexed.rs  production_defaults.rs  simple.rs  watcher.rs
src/logpatterns/: columns.rs  formatting.rs  logfmt.rs  mod.rs  patterns.rs  sourced.rs
src/metrics/: collector.rs  memory.rs  metrics.rs  mod.rs
src/multiplexed/: batch.rs  file_state.rs  mod.rs  watcher.rs
src/readers/: backseeking.rs  buffered.rs  chunked.rs  mod.rs  single.rs  stdin.rs
src/readers/adapting/: adaptive.rs  memory.rs  metrics.rs  mod.rs  strategies.rs
src/readers/metrics/: metrics.rs
src/readers/strategies/: adaptive.rs  conservative.rs  fixed.rs  mod.rs
src/tests/: adaptation.rs  budget.rs  integration.rs  mod.rs  simulation.rs
tests/: memory_budget_integration.rs  tailing.rs
