[package]
name = "tale"
version = "0.1.0"
description = "A tail-compatible tool for pretty-printing ndjson files, especially logs."
categories = ["command-line-utilities", "text-processing"]
keywords = ["ndjson", "pretty-print", "logging", "json", "tail"]
authors = ["C J Silverio <ceejceej@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "Parity-7.0.0"
repository = "https://github.com/ceejbot/tale"
homepage = "https://github.com/ceejbot/tale"

[dependencies]
ansi-width = "0.1.0"
async-watcher = "0.3"
bytes = "1.10.1"
clap = { version = "4.5.42", features = ["derive", "wrap_help"] }
futures = "0.3"
glob = "0.3.2"
humansize = { version = "2.1.3" }
jiff = { version = "0.2.15", features = ["serde"] }
memory-stats = "1.2.0"
miette = { version = "7", features = ["fancy"] }
notify = "8.1.0"
owo-colors = "4.2.2"
ripline = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sysinfo = { version = "0.36.1" }
textwrap = { version = "0.16.2", features = ["terminal_size"] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"

[lints.rust]
unsafe_code = { level = "deny", priority = 1 }
future_incompatible = { level = "deny", priority = 2 }
trivial_casts = { level = "warn", priority = 3 }
rust_2018_idioms = { level = "warn", priority = 4 }

[lints.clippy]
unwrap_used = "deny"

[profile.release]
lto = true           # Enable full link-time optimization
codegen-units = 1    # Single codegen unit for better optimization
opt-level = 3        # Maximum optimization
strip = true         # Strip symbols for smaller binary
panic = "abort"      # Smaller binary, no unwinding

[profile.dev]
debug-assertions = true

[profile.test]
debug-assertions = true
