[package]
name = "tale-ndjson"
version = "0.3.0"
description = "A tail-compatible tool for pretty-printing ndjson files, especially logs."
categories = ["command-line-utilities", "text-processing"]
keywords = ["ndjson", "pretty-print", "logging", "json", "tail"]
authors = ["C J Silverio <ceejceej@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "Parity-7.0.0"
repository = "https://github.com/ceejbot/tale"
homepage = "https://github.com/ceejbot/tale"

[[bin]]
name = "tale"
path = "src/main.rs"

[dependencies]
ansi-width = "0.1.0"
bytes = "1.10.1"
clap = { version = "4.5.45", features = ["derive", "wrap_help"] }
clap_complete = "4.5.57"
glob = "0.3.3"
humansize = { version = "2.1.3" }
jiff = { version = "0.2.15", features = ["serde"] }
memory-stats = "1.2.0"
miette = { version = "7", features = ["fancy"] }
notify = "8.2.0"
owo-colors = "4.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sysinfo = "0.38.2"
tabwriter = "1"
tempfile = "3.21"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "chunking_strategies"
harness = false

[[bench]]
name = "memory_management"
harness = false

[[bench]]
name = "file_processing"
harness = false

[lints.rust]
unsafe_code = { level = "deny", priority = 1 }
future_incompatible = { level = "deny", priority = 2 }
trivial_casts = { level = "warn", priority = 3 }
rust_2018_idioms = { level = "warn", priority = 4 }

[lints.clippy]
unwrap_used = "deny"
manual_is_multiple_of = "allow"

[profile.release]
lto = true        # Enable full link-time optimization
codegen-units = 1 # Single codegen unit for better optimization
opt-level = 3     # Maximum optimization
strip = true      # Strip symbols for smaller binary
panic = "abort"   # Smaller binary, no unwinding

[profile.dev]
debug-assertions = true

[profile.test]
debug-assertions = true
